<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_gec"
    tools:context=".ui.main.tasks.gec.GECActivity"
    >

    <data>
        <variable
            name="vm"
            type="com.example.alpha_ai.ui.main.tasks.gec.GECViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingTop="10dp"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/input_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#EAF6FF"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_input_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_the_input"
                    android:textColor="#263238"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:gravity="top|start"
                    android:hint="@string/type_or_paste_your_text_here"
                    android:textColorHint="#90A4AE"
                    android:minLines="5"
                    android:maxLines="8"
                    android:text="@={vm.input}"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    app:layout_constraintTop_toBottomOf="@id/tv_input_label" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_input">

                    <ImageButton
                        android:id="@+id/btn_paste"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/bg_circle_white"
                        android:src="@drawable/ic_paste"
                        android:scaleType="centerInside"
                        android:layout_marginEnd="8dp"
                        android:onClick="@{() -> vm.paste()}"
                        app:tint="#546E7A"/>

                    <ImageButton
                        android:id="@+id/btn_clear"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/bg_circle_white"
                        android:src="@drawable/ic_close"
                        android:scaleType="centerInside"
                        android:onClick="@{() -> vm.clear()}"
                        app:tint="#546E7A"/>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/output_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/input_card">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_output_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/output"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_output_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:fontFamily="sans-serif"
                    android:background="@drawable/bg_chip_transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                    android:id="@+id/edit_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:gravity="top|start"
                    android:minLines="6"
                    android:maxLines="8"
                    android:hint="@string/corrected_text_will_appear_here"
                    android:textColorHint="#80FFFFFF"
                    android:text="@={vm.output}"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:focusable="false"
                    android:fontFamily="sans-serif"
                    app:layout_constraintBottom_toTopOf="@id/divider"
                    app:layout_constraintTop_toBottomOf="@id/tv_output_label" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#30FFFFFF"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toTopOf="@id/actions_output"/>

                <LinearLayout
                    android:id="@+id/actions_output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:id="@+id/btn_copy"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/copy"
                        android:layout_marginEnd="20dp"
                        app:tint="@color/white"
                        android:contentDescription="@string/copy"
                        android:onClick="@{() -> vm.copy()}"/>

                    <ImageView
                        android:id="@+id/btn_share"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_share"
                        app:tint="@color/white"
                        android:contentDescription="@string/share"
                        android:onClick="@{() -> vm.share()}"/>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/bottom_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingBottom="20dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_summarize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/summarize"
                android:textSize="16sp"
                android:textColor="@color/blue"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-medium"
                app:icon="@drawable/ic_sort"
                app:iconTint="@color/blue"
                app:backgroundTint="#EAF6FF"
                app:cornerRadius="16dp"
                app:elevation="0dp"
                android:onClick="@{() -> vm.summarize()}"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_correction"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/correction"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:icon="@drawable/ic_magic_wand"
                app:iconGravity="textEnd"
                app:backgroundTint="@color/blue"
                app:cornerRadius="30dp"
                android:fontFamily="sans-serif-medium"
                android:onClick="@{() -> vm.submit()}"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>