<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login"
    tools:context=".ui.login.LoginActivity"
    >

    <data>
        <variable
            name="vm"
            type="com.example.alpha_ai.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/trans"
        android:padding="16dp"
        >

        <TextView
            style="@style/main_text_style"
            android:id="@+id/main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:paddingStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            style="@style/welcome_text_style"
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back_to_alpha_ai"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/main_text"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            style="@style/fill_text_style"
            android:id="@+id/fill_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_login_to_continue_to_your_account"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"
            app:layout_constraintStart_toStartOf="parent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/fill_text">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray100"
                android:layout_marginVertical="10dp"
                app:cardCornerRadius="20dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="20dp"
                        android:layout_marginVertical="25dp"
                        android:layout_marginHorizontal="20dp"
                        android:src="@drawable/email"
                        android:adjustViewBounds="true"
                        />
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="8dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        errorText="@{vm.emailError}"
                        >
                        <EditText
                            android:id="@+id/edit_email_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_address"
                            android:text="@={vm.email}"
                            android:inputType="textEmailAddress"
                            android:background="@color/trans"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray100"
                android:layout_marginVertical="10dp"
                app:cardCornerRadius="20dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="25dp"
                        android:layout_marginVertical="20dp"
                        android:layout_marginHorizontal="25dp"
                        android:src="@drawable/passward"
                        android:adjustViewBounds="true"
                        />
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="8dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        errorText="@{vm.passwordError}"
                        >
                        <EditText
                            android:id="@+id/edit_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:text="@={vm.password}"
                            android:inputType="textPassword"
                            android:background="@color/trans"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/remember_me"
                android:button="@drawable/checkbox_selector"
                android:checked="false"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:cardCornerRadius="20dp"
                android:backgroundTint="@color/blue100"
                >
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="8dp"
                    android:gravity="center"
                    android:background="@color/trans"
                    android:onClick="@{() -> vm.login()}"
                    android:text="@string/sign_in"
                    android:textSize="24sp"
                    android:textAllCaps="false"
                    android:textColor="@color/gray100"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:gravity="center"
                android:background="@color/trans"
                android:textAllCaps="false"
                android:text="@string/forget_password"
                android:textSize="16sp"
                android:textColor="@color/blue"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/text_create_my_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="16sp"
                    android:textColor="@color/gray"
                    />
                <Button
                    android:id="@+id/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@color/trans"
                    android:textAllCaps="false"
                    android:text="@string/sign_up"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    android:onClick="@{()-> vm.goToRegister()}"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                android:weightSum="3"
                >
                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/gray200" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/gray200"
                    android:textStyle="bold"
                    android:text="@string/or_continue_with"
                    />
                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/gray200" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="15dp"
                android:weightSum="2"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/gray100"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="20dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:layout_gravity="center"
                        android:src="@drawable/google"
                        />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/gray100"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="20dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:layout_gravity="center"
                        android:src="@drawable/facebook"
                        />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>