<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_splash_gradient"
        tools:context=".ui.splash.SplashActivity">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:src="@drawable/alpha_ai_logo"
            app:layout_constraintBottom_toTopOf="@+id/tv_app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/app_title_formatted"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />


        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loading_bar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:indeterminate="true"
            app:indicatorColor="@color/blue"
            app:trackColor="#E0E0E0"
            app:trackCornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:letterSpacing="0.05"
            android:text="@string/version_info"
            android:textColor="#9E9E9E"
            android:textSize="12sp"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@+id/tv_powered_by"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_powered_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/powered_by"
            android:textColor="#BDBDBD"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>